# CMOSPV_ML

./: .gitattributes  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/AI Notebooks/: Copy of 10 cv confusion matrix for Random forest classifier.ipynb  Copy of Correlation plots, graphs and basic cleaning.ipynb  Copy of Decision Tree Classifier without dropping columns.ipynb  Copy of Linear Regression Feature Importance.ipynb  Copy of Logistics Regression Feature Importance.ipynb  Copy of Naive bayes classifier without dropping columns.ipynb  Copy of Random forest classifier without dropping columns.ipynb  Copy of SVM K fold random without.ipynb  Copy of Voting classifier without dropping columns.ipynb
