[tool.poetry]
name = "CMOSPV_ML"
version = "1.0"
description = "CMOSPV Machine Learning Research"
authors = ["Nate Ruppert <nate.ruppert@csu.fullerton.edu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
Sphinx = "^4.1.0"
rinohtype = "^0.5.3"
sphinx-rtd-theme = "^0.5.2"
pydeps = "^1.9.13"
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.5b2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile='black'

[tool.black]
target-version = ['py310']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''
