[tool.poetry]
name = "CMOSPV_ML"
version = "1.0"
description = "CMOSPV Machine Learning Research"
authors = ["Nate Ruppert <nate.ruppert@csu.fullerton.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
scipy = '^1.7.2'
pandas = '^1.3.4'
seaborn = '^0.11.2'
matplotlib = '^3.5.0'
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
Sphinx = "^4.1.0"
rinohtype = "^0.5.3"
sphinx-rtd-theme = "^0.5.2"
pydeps = "^1.9.13"
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.5b2"
pytest-cov = "^2.12.1"
wheel = "^0.37.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile='black'

[tool.black]
target-version = ['py310']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''
